# low_latency_order_gateway

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
benchmarks/: bench_end_to_end.cpp  bench_parser.cpp  bench_path_comparison.cpp
data/: sample_feed.txt
docs/: architecture.md  benchmark_methodology.md  benchmark_suite.md  ci.md  end_to_end_benchmark_methodology.md  execution_reports.md  final_report.md  order_actions.md  order_lifecycle.md  path_comparison_benchmark_methodology.md  portfolio_summary.md  pre_trade_risk.md  production_readiness.md  project_status.md  release_checklist.md  stage1_design_notes.md  study_log.md
include/llgw/: exchange_simulator.hpp  execution_report.hpp  feed_replay.hpp  fixed_symbol.hpp  latency_clock.hpp  market_data_parser.hpp  messages.hpp  order_gateway.hpp  order_lifecycle.hpp  order_pipeline.hpp  pre_trade_risk.hpp  ring_buffer.hpp  simple_strategy.hpp
scripts/: run_benchmark_suite.sh  run_benchmarks.sh  run_ci_smoke.sh  run_end_to_end_benchmark.sh  run_final_validation.sh  run_path_comparison_benchmark.sh  run_quality_gate.sh  run_sanitizers.sh  run_tests.sh
src/: exchange_simulator.cpp  execution_report.cpp  feed_replay.cpp  main.cpp  market_data_parser.cpp  order_gateway.cpp  order_lifecycle.cpp  pre_trade_risk.cpp  simple_strategy.cpp
tests/: test_end_to_end_execution_report.cpp  test_end_to_end_lifecycle.cpp  test_end_to_end_order_actions.cpp  test_end_to_end_order_flow.cpp  test_end_to_end_pipeline.cpp  test_end_to_end_risk.cpp  test_exchange_simulator.cpp  test_execution_report.cpp  test_feed_replay.cpp  test_fixed_symbol.cpp  test_hardening.cpp  test_market_data_parser.cpp  test_order_actions.cpp  test_order_gateway.cpp  test_order_lifecycle.cpp  test_order_pipeline.cpp  test_pre_trade_risk.cpp  test_ring_buffer.cpp  test_simple_strategy.cpp
